--- a/build.properties
+++ b/build.properties
@@ -5,10 +5,10 @@
 #########
 
 #required
-maven.home=/usr/share/maven
+maven.home=/usr/local/Cellar/maven/current
 
 #optional
-jrebel.path=/usr/lib/jrebel/jrebel.jar
+jrebel.path=/usr/local/Cellar/jrebel/jrebel.jar
 
 #optional for build-create-sql and build-update-sql ant tasks
 ant.hibernate.sql.ddl.dialect=org.hibernate.dialect.HSQLDialect
